src/app/app.component.css
.container {
  margin: 0 25px 0 25px;
}

.image, .image-selector {
  width: 100%;
}

.image-selector {
  position: absolute;
  bottom: 15px;
  width: 100%;
  left: 0;
}

.copy {
  width: 100%;
  margin-top: 40px;
  font-size: 18px;
  line-height: 30px;
  text-align: center
}

.copy.bs {
  display: none;
}

@media screen and (max-width: 768px) and (min-height: 730px) {
  .copy {
    position: absolute;
    bottom: 150px;
    left: 5%;
    font-size: 20px;
    width: 90%;
  }
}
@media screen and (min-width: 530px) {
  .copy {
    font-size: 18px;
    line-height: 26px;
    margin-top: 26px;
  }
}

@media screen and (min-width: 980px) and (max-height:1024px), screen and (min-width: 480px) and (max-height: 460px) {
  .image {
    max-width: 480px;
  }
  .image-selector {
    position: relative;
    max-width: 450px;
    margin-top: 45px;
  }
  .copy.ss {
    display: none;
  }
  .copy.bs {
    display: block;
/*     width: auto; */
    max-width: 48%;
    float: right;
    font-size: 30px;
    line-height: 50px;
    margin-top: 120px;
    text-align: left;

  }
}

@media screen and (max-width: 768px) and (min-height: 300px) {
  .copy.bs {
    font-size: 20px;
    line-height: 40px;
    margin-top: 30px;
  }
}

@media screen and (min-width: 1124px) {
  .copy.bs {
    max-width: 55%;
  }
}
@media screen and (min-width: 1480px) {
  .copy.bs {
    max-width: 70%;
  }
}


@media screen and (min-width: 980px) and (max-height: 1024px) {
  .image-selector {
    position: relative;
    margin-top: 45px;
  }
}

@media screen and (min-height: 1024px) and (max-width: 768px), screen and (min-height: 1025px), screen and (min-width: 769px) and (min-height: 1024px) {
  .image-selector {
    position: absolute;
    bottom: 15px;
    width: 100%;
    left: 0;
    max-width: 20000px;
  }
  .copy {
    font-size: 28px;
    line-height: 46px;
    margin-top: 26px;
  }
}

@media screen and (min-height: 1025px), screen and (min-width: 769px) and (min-height: 1024px) {
  .copy {
    font-size: 38px;
    line-height: 70px;
    margin-top: 50px;
  }
}

@media screen and (min-height: 1024px) and (min-width: 1024px) {
  .copy.bs {
    font-size: 38px;
    line-height: 70px;
    margin-top: 250px;
    max-width: 27%;
  }
}

